# securityguard

./: CHANGELOG.md  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  release.yml
src/securityguard/: __main__.py  cli.py
src/securityguard/enums/: __init__.py
src/securityguard/main/: config.py  workflow.py
