[project]
name = "openethos-securityguard"
version = "0.0.0" # This will be updated by a script or standalone file
description = "A security monitoring and alerting tool."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["security", "monitoring", "alerting"]
authors = [
    { name = "Jason Miller", email = "jason.miller@thoughtparameters.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "pydantic>=1.8",
    "rich>=10.0",
    "click>=8.0",
    "requests>=2.25",
    # Add other dependencies from requirements.txt here
]


[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
packages = ["securityguard"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py38']
